--- a/postgres/.env
+++ b/postgres/.env
@@ -1,7 +1,7 @@
-#PGHOST=postgres
-#PGPORT=5432
-#PGDATABASE=postgres
-#PGUSER=postgres
-#PGPASSWORD=postgres
+PGHOST=localhost
+PGPORT=5432
+PGDATABASE=postgres
+PGUSER=postgres
+PGPASSWORD=postgres
 PRQL_COMPILE_OPTIONS="--target=sql.postgres --hide-signature-comment"
 PRQL_EXEC_COMMAND='psql'
