Adds DuckDB.to_csv function via SQL-injection

--- a/duckdb/.env
+++ b/duckdb/.env
@@ -1,2 +1,3 @@
 PRQL_COMPILE_OPTIONS="--target=sql.duckdb --hide-signature-comment"
-PRQL_EXEC_COMMAND='duckdb -cmd "LOAD httpfs;"'
+PRQL_EXEC_OPTIONS=':memory:'
+PRQL_EXEC_COMMAND='duckdb'
