--- a/os/.env
+++ b/os/.env
@@ -1,2 +1,2 @@
 PRQL_COMPILE_OPTIONS="--target=sql.sqlite --hide-signature-comment"
-PRQL_EXEC_COMMAND='osqueryi "$(cat)"'
+PRQL_EXEC_COMMAND='osqueryi "$sql"'
