--- a/sqlite/.env
+++ b/sqlite/.env
@@ -1,2 +1,3 @@
 PRQL_COMPILE_OPTIONS="--target=sql.sqlite --hide-signature-comment"
-PRQL_EXEC_COMMAND='sqlite3'
+PRQL_EXEC_OPTIONS=':memory:'
+PRQL_EXEC_COMMAND='sqlite3 $PRQL_EXEC_OPTIONS "$sql"'
