--- a/duckdb/.env
+++ b/duckdb/.env
@@ -1,3 +1,3 @@
 PRQL_COMPILE_OPTIONS="--target=sql.duckdb --hide-signature-comment"
-PRQL_EXEC_OPTIONS=':memory:'
-PRQL_EXEC_COMMAND='duckdb $PRQL_EXEC_OPTIONS "$sql"'
+#PRQL_EXEC_OPTIONS=':memory:'
+PRQL_EXEC_COMMAND='duckdb :memory: -box $PRQL_EXEC_OPTIONS "$sql"'
