--- a/git/.env
+++ b/git/.env
@@ -1,2 +1,3 @@
 PRQL_COMPILE_OPTIONS="--target=sql.sqlite --hide-signature-comment"
+PRQL_EXEC_OPTIONS="--repo $(git rev-parse --show-toplevel)"
 PRQL_EXEC_COMMAND='mergestat $PRQL_EXEC_OPTIONS "$sql"'
